Fix TestRedis