@@ -27,9 +27,19 @@
 
 package org.mitre.mpf.wfm.data;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSortedMap;
-import com.google.common.collect.ImmutableSortedSet;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
+import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
+
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.SortedSet;
+
 import org.junit.After;
 import org.junit.Before;
 import org.junit.BeforeClass;
@@ -47,10 +57,8 @@ import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.test.context.web.WebAppConfiguration;
 
-import java.util.*;
-
-import static org.junit.Assert.*;
-import static org.mockito.Mockito.*;
+import com.google.common.collect.ImmutableSortedMap;
+import com.google.common.collect.ImmutableSortedSet;
 
 @WebAppConfiguration
 @ContextConfiguration(locations = "classpath:applicationContext.xml")
@@ -221,13 +229,15 @@ public class TestRedis {
         var media = mock(Media.class);
         when(media.getId())
                 .thenReturn(TEST_MEDIA_ID);
+        when(media.getCreationTask())
+                .thenReturn(-1);
 
         var job = mock(BatchJob.class, RETURNS_DEEP_STUBS);
         when(job.getId())
                 .thenReturn(TEST_JOB_ID);
         when(job.getMedia())
-                .thenAnswer(invocation -> ImmutableList.of(media));
-        when(job.getPipelineElements().getPipeline().getTasks().size())
+                .thenReturn(List.of(media));
+        when(job.getPipelineElements().getTaskCount())
                 .thenReturn(2);
         when(job.getPipelineElements().getTask(0).getActions().size())
                 .thenReturn(1);
